--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>웹서비스 기획자 — 자기소개</title>
+  <title>이현재 — 물류·배송 웹서비스 기획자</title>
   <style>
     :root{
       --bg:#0f1724; --card:#0b1220; --accent:#7c3aed; --muted:#94a3b8; --text:#e6eef8;
@@ -19,7 +19,7 @@
       display:flex; align-items:center; justify-content:center; padding:40px;
     }
     .container{
-      width:100%; max-width:900px; backdrop-filter: blur(6px);
+      width:100%; max-width:960px; backdrop-filter: blur(6px);
     }
     header{
       display:flex; gap:20px; align-items:center; margin-bottom:20px;
@@ -29,140 +29,278 @@
       display:flex; align-items:center; justify-content:center; font-weight:700; font-size:28px; color:white;
       box-shadow: 0 6px 18px rgba(12,18,30,0.6);
     }
-    h1{margin:0; font-size:22px}
-    p.lead{margin:6px 0 0; color:var(--muted)}
+    h1{margin:0; font-size:24px}
+    p.lead{margin:6px 0 0; color:var(--muted); font-size:14px}
     .card{
       background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
       border:1px solid rgba(255,255,255,0.04); padding:20px; border-radius:12px; box-shadow: 0 8px 30px rgba(2,6,23,0.6);
     }
-    .grid{display:grid; grid-template-columns:1fr 320px; gap:18px;}
-    @media (max-width:820px){ .grid{grid-template-columns:1fr} .avatar{width:72px;height:72px} }
-    section{margin-bottom:14px}
+    .grid{display:grid; grid-template-columns:1.6fr 1fr; gap:18px;}
+    @media (max-width:840px){ .grid{grid-template-columns:1fr} .avatar{width:72px;height:72px} }
+    section{margin-bottom:16px}
     h2{font-size:15px; margin:0 0 8px}
     .skills{display:flex; flex-wrap:wrap; gap:8px}
-    .chip{background:var(--glass); color:var(--text); padding:6px 10px; border-radius:999px; font-size:13px; border:1px solid rgba(255,255,255,0.03)}
-    .experience{display:flex; flex-direction:column; gap:12px}
-    .exp-item{padding:12px; background:rgba(255,255,255,0.01); border-radius:10px; border:1px solid rgba(255,255,255,0.03)}
-    .meta{color:var(--muted); font-size:13px}
-    .contact a{color:var(--accent); text-decoration:none}
-    footer{margin-top:14px; color:var(--muted); font-size:13px; text-align:center}
+    .chip{background:var(--glass); color:var(--text); padding:6px 10px; border-radius:999px; font-size:12px; border:1px solid rgba(255,255,255,0.04)}
+    .experience{display:flex; flex-direction:column; gap:10px; font-size:13px}
+    .exp-item{padding:10px; background:rgba(255,255,255,0.01); border-radius:10px; border:1px solid rgba(255,255,255,0.03)}
+    .exp-header{display:flex; justify-content:space-between; gap:8px; font-size:13px; margin-bottom:4px;}
+    .exp-title{font-weight:600}
+    .meta{color:var(--muted); font-size:12px}
+    .badge{display:inline-block; padding:2px 6px; border-radius:999px; border:1px solid rgba(148,163,184,0.5); font-size:11px; color:var(--muted); margin-left:6px;}
+    .list-tight{margin:4px 0 0; padding-left:18px; font-size:13px;}
+    .list-tight li{margin-bottom:2px;}
+    .contact a{color:var(--accent); text-decoration:none; font-size:13px}
+    footer{margin-top:14px; color:var(--muted); font-size:12px; text-align:center}
     .links{display:flex; gap:10px; flex-wrap:wrap}
     .btn{
-      display:inline-flex; gap:8px; align-items:center; padding:8px 12px; background:transparent; border:1px solid rgba(255,255,255,0.04);
-      color:var(--text); border-radius:8px; text-decoration:none; font-size:14px;
+      display:inline-flex; gap:6px; align-items:center; padding:7px 10px; background:transparent; border:1px solid rgba(255,255,255,0.08);
+      color:var(--text); border-radius:8px; text-decoration:none; font-size:13px;
     }
-    pre{background:#061022; padding:10px; border-radius:8px; overflow:auto; font-size:13px}
+    .tagline{font-size:13px; color:var(--muted); margin-top:4px;}
+    .two-col{display:grid; grid-template-columns:repeat(2,minmax(0,1fr)); gap:8px; font-size:13px;}
+    @media (max-width:600px){ .two-col{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
-  <main class="container">
-    <header>
-      <div class="avatar">JD</div>
-      <div>
-        <h1>홍길동 — 웹서비스 기획자 (Product/PM)</h1>
-        <p class="lead">사용자 중심의 데이터 기반 서비스 설계 · 요구사항 정의 · 프로덕트 전략 수립</p>
-      </div>
-    </header>
+<main class="container">
+  <header>
+    <div class="avatar">HJ</div>
+    <div>
+      <h1>이현재 — 물류·배송 웹서비스 기획자</h1>
+      <p class="lead">
+        커머스 물류·배송 도메인 특화 웹서비스 기획 · Admin/백오피스 · API/연동 · 자동화 물류센터·라스트마일 배송 전략
+      </p>
+      <p class="tagline">
+        5년 8개월 경력 · Qoo10·QXPRESS 물류 플랫폼 → SSG.COM 물류플랫폼기획팀
+      </p>
+    </div>
+  </header>
 
-    <div class="grid">
-      <div class="card">
-        <section>
-          <h2>소개</h2>
-          <p>안녕하세요. 저는 5년차 웹서비스 기획자입니다. 사용자 문제 정의부터 요구사항 도출, 와이어프레임, A/B 테스트 설계, KPI 설정 및 분석까지 전주기를 담당합니다. 주요 관심사는 사용자 경험(UX) 향상과 성장(그로스) 기반의 실험 설계입니다.</p>
-        </section>
+  <div class="grid">
+    <!-- 좌측 메인 -->
+    <div class="card">
+      <section>
+        <h2>소개</h2>
+        <p style="font-size:13px; line-height:1.6;">
+          이커머스/물류 현장 경험을 바탕으로, 주문·배송·정산 전 과정을 설계해 온 물류·배송 서비스 기획자입니다.
+          해외 C2C 플랫폼(Qoo10)부터 국내 커머스(SSG.COM)까지, 라스트마일 제휴·배송 추적·자동화 물류센터·백오피스 Admin까지
+          전주기를 직접 기획·운영해 왔습니다.
+        </p>
+      </section>
 
-        <section>
-          <h2>주요 역할</h2>
-          <ul>
-            <li>서비스 기획 · 로드맵 수립</li>
-            <li>사용자 리서치·페르소나·여정지도 작성</li>
-            <li>요구사항 정의서(PRD) 및 와이어프레임 제작</li>
-            <li>A/B 테스트 설계 및 데이터 기반 의사결정</li>
-            <li>팀·PM·디자이너·엔지니어 협업과 스프린트 운영</li>
-          </ul>
-        </section>
+      <section>
+        <h2>핵심 역량</h2>
+        <ul class="list-tight">
+          <li>이커머스 배송·물류 도메인 특화 서비스/플랫폼 기획 (Qoo10, QXPRESS, SSG.COM)</li>
+          <li>Admin/백오피스·배송 추적·정산·원격 입고·운송장 출력 등 운영 시스템 기획</li>
+          <li>해외/국내 라스트마일 배송사 API·FTP 연동 및 제휴 프로세스 기획 (DHL, YTO, POS Laju 등)</li>
+          <li>MS-SQL·Python(Selenium, Requests) 기반 데이터 추출·운영 이슈 대응 및 QA</li>
+        </ul>
+      </section>
 
-        <section>
-          <h2>주요 성과</h2>
-          <div class="experience">
-            <div class="exp-item">
-              <div class="meta">프로젝트 A — 커머스 전환율 개선 · 2023</div>
-              <div>상품 상세 페이지 개편 및 CTA 재설계로 전환율 +18%, 평균 주문액 +7% 달성</div>
+      <section>
+        <h2>주요 성과</h2>
+        <div class="experience">
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">QXPRESS 원격 입고 API 및 운송장 자동 발급 서비스 기획</div>
+              <div class="meta">QXPRESS 플랫폼 기획실</div>
             </div>
-            <div class="exp-item">
-              <div class="meta">프로젝트 B — 온보딩 퍼널 최적화 · 2022</div>
-              <div>온보딩 흐름 재설계와 이메일 리마인더 자동화로 활성화율 25%p 향상</div>
+            <ul class="list-tight">
+              <li>고객사(WISH 등)에서 자사 물류센터로 직접 운송장 취득·데이터 전송이 가능하도록 원격 입고 API 신규 설계</li>
+              <li>DHL·SAGAWA·CJ대한통운 등 제휴 배송사의 운송장·데이터 전송 자동화로 포털 수기 작업 시간 및 실수 감소</li>
+            </ul>
+          </div>
+
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">월 단위 배송비 자동 집계·청구 Admin 메뉴 기획</div>
+              <div class="meta">QXPRESS Smartship</div>
             </div>
+            <ul class="list-tight">
+              <li>국가·법인별 이용 데이터를 기준으로 배송비를 월 단위 자동 집계하고, 청구서 PDF 생성·이메일 발송까지 자동화</li>
+              <li>회계/정산 담당자의 수기 청구서 작성 업무를 제거하여, 반복 작업 및 오류를 크게 감소</li>
+            </ul>
           </div>
-        </section>
 
-        <section>
-          <h2>프로세스</h2>
-          <ol>
-            <li>문제 정의 · KPI 설정</li>
-            <li>사용자 리서치(인터뷰·설문) → 인사이트 추출</li>
-            <li>아이디어 도출 → 와이어프레임 → 프로토타입</li>
-            <li>개발 스펙 작성 · 스프린트 진행</li>
-            <li>A/B 테스트 · 분석 → 개선 반복</li>
-          </ol>
-        </section>
-
-        <section>
-          <h2>연락처</h2>
-          <p class="contact">이메일: <a href="mailto:you@example.com">you@example.com</a><br>깃허브: <a href="https://github.com/yourusername" target="_blank" rel="noopener">github.com/yourusername</a></p>
-        </section>
-      </div>
-
-      <aside class="card">
-        <section>
-          <h2>스킬</h2>
-          <div class="skills">
-            <span class="chip">서비스 기획</span>
-            <span class="chip">PRD</span>
-            <span class="chip">와이어프레임</span>
-            <span class="chip">Figma</span>
-            <span class="chip">A/B 테스트</span>
-            <span class="chip">GA4 / Mixpanel</span>
-            <span class="chip">SQL 기초</span>
-            <span class="chip">그로스 전략</span>
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">Qoo10 배송 서비스 후기·만족도 프론트 페이지 기획</div>
+              <div class="meta">Qoo10 플랫폼 기획실</div>
+            </div>
+            <ul class="list-tight">
+              <li>배송 서비스 후기·평점을 출발국·서비스 도메인·사용자 언어 기준으로 한 화면에서 조회 가능한 웹 페이지 신규 설계</li>
+              <li>서비스별 후기 비교가 쉬워져, SQM·운영팀의 품질 모니터링과 이용자 의사결정에 기여</li>
+            </ul>
           </div>
-        </section>
 
-        <section>
-          <h2>기술 스택</h2>
-          <div class="skills">
-            <span class="chip">Figma</span>
-            <span class="chip">Notion</span>
-            <span class="chip">Jira</span>
-            <span class="chip">Slack</span>
-            <span class="chip">Google Analytics</span>
-            <span class="chip">Mixpanel</span>
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">배송사별 배송 현황 조회 Admin 개편</div>
+              <div class="meta">Qoo10 / QXPRESS</div>
+            </div>
+            <ul class="list-tight">
+              <li>전체 주문의 배송사·평균 배송 리드타임 조회 기능을 재구성하여, SQM KPI 관리에 최적화된 Admin 화면 설계</li>
+              <li>실시간 조회 구조에서 월/일 단위 배치 집계 구조로 전환하는 개선 과제 정의 (대용량 데이터 대응)</li>
+            </ul>
           </div>
-        </section>
 
-        <section>
-          <h2>간단 이력</h2>
-          <p class="meta">2020–현재 · 웹서비스 기획자 · (회사명)<br>2018–2020 · UI/UX 디자이너 · (회사명)</p>
-        </section>
-
-        <section>
-          <h2>다운로드</h2>
-          <div class="links">
-            <a class="btn" href="#" download>이력서 (PDF)</a>
-            <a class="btn" href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">배송 추적 페이지 및 책임 주체 명시</div>
+              <div class="meta">Qoo10 / QXPRESS</div>
+            </div>
+            <ul class="list-tight">
+              <li>입·출고, 공항 출·도착, 현지 배송 인계 등 단계별로 책임 배송사를 명시하는 Multi Tracking 페이지 기획</li>
+              <li>배송 상태·책임 주체가 명확해져 화물 분실·파손 클레임 처리 리드타임과 빈도를 낮추는 데 기여</li>
+            </ul>
           </div>
-        </section>
-      </aside>
+
+          <div class="exp-item">
+            <div class="exp-header">
+              <div class="exp-title">자동화 물류센터·배송 기사 앱·백오피스 기획</div>
+              <div class="meta">SSG.COM 물류플랫폼기획팀</div>
+            </div>
+            <ul class="list-tight">
+              <li>이마트몰 쓱배송 기사 앱 및 백오피스, 백화점 배송 백오피스 운영 개선, 자동화센터 대출입·이관·폐기·집품 기능 기획</li>
+              <li>이마트 점포 POG·집품 관련 시스템 기획이 한국경제 등 외부 매체에 소개되며, 현장 운영 효율화 사례로 보도</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2>자기소개 · 커리어 스토리</h2>
+        <p style="font-size:13px; line-height:1.6; margin-bottom:6px;">
+          첫 서비스 기획은 Qoo10 플랫폼의 배송 서비스 화면·후기 페이지에서 시작했습니다.
+          PC/모바일 웹 기반의 화면 설계뿐 아니라, 실제 배송 상태를 추적하는 Admin·API 구조까지 함께 이해하고 설계해 왔습니다.
+        </p>
+        <p style="font-size:13px; line-height:1.6; margin-bottom:6px;">
+          이후 QXPRESS 플랫폼 기획실 셋업 멤버로 합류하여 Smartship, 해외 발송 대행, 가상계좌 입금 처리,
+          배송비 청구, 월 단위 정산, 원격 입고 API, 대만 편의점(7-11·FamilyMart) 배송 등 물류 서비스 전반을 기획·운영했습니다.
+          IT Help Desk를 전담하며 MS-SQL·Python(Selenium)으로 데이터를 직접 추출·검증하고, 대량 사고를 선제적으로 대응해 왔습니다.
+        </p>
+        <p style="font-size:13px; line-height:1.6;">
+          SSG.COM에서는 이마트몰 쓱배송 기사 앱·백오피스, 자동화 물류센터, 백화점 배송/집품 등 고도화된 국내 커머스 환경에서
+          물류 서비스 기획 경험을 확장하고 있습니다. 그룹사의 전략 변경으로 온라인 물류 사업이 축소·중단되는 국면을 겪으며
+          더욱 성장 가능성이 높은 환경에서 물류·배송 플랫폼 기획 역량을 발휘하고자 새로운 도전을 준비하고 있습니다.
+        </p>
+      </section>
     </div>
 
-    <footer>
-      © <span id="year"></span> 홍길동 — 웹서비스 기획자
-    </footer>
-  </main>
+    <!-- 우측 사이드 -->
+    <aside class="card">
+      <section>
+        <h2>기본 정보</h2>
+        <div class="two-col">
+          <div>
+            <div class="meta">이름</div>
+            <div style="font-size:13px;">이현재 (HyunJae Lee)</div>
+          </div>
+          <div>
+            <div class="meta">생년월일</div>
+            <div style="font-size:13px;">1991.05.10</div>
+          </div>
+          <div>
+            <div class="meta">성별</div>
+            <div style="font-size:13px;">남성</div>
+          </div>
+          <div>
+            <div class="meta">거주지</div>
+            <div style="font-size:13px;">인천광역시 부평구 마곡로 14</div>
+          </div>
+        </div>
+      </section>
 
-  <script>
-    // 연도 자동 표기
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+      <section>
+        <h2>연락처</h2>
+        <p class="contact">
+          이메일: <a href="mailto:october1129@naver.com">october1129@naver.com</a><br/>
+          전화: 010-2948-6029
+        </p>
+      </section>
+
+      <section>
+        <h2>학력</h2>
+        <p class="meta">
+          2010.03 – 2017.08<br/>
+          숭실대학교 행정·경제학과 복수전공 학사 (3.17 / 4.5), 서울<br/><br/>
+          2007.03 – 2010.02<br/>
+          평촌고등학교 졸업, 경기 안양
+        </p>
+      </section>
+
+      <section>
+        <h2>경력 요약 (5년 8개월)</h2>
+        <div class="experience">
+          <div class="exp-item">
+            <div class="exp-title">SSG.COM</div>
+            <div class="meta">물류플랫폼기획팀 · 플랫폼기획담당 팀원<br/>2022.06 – 재직 중</div>
+          </div>
+          <div class="exp-item">
+            <div class="exp-title">(주)큐익스프레스</div>
+            <div class="meta">플랫폼기획실 · 대리<br/>2022.01 – 2022.05 (5개월)</div>
+          </div>
+          <div class="exp-item">
+            <div class="exp-title">지오시스(유)</div>
+            <div class="meta">Qx Dev Division · 사원<br/>2018.12 – 2021.12 (3년)</div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2>스킬</h2>
+        <div class="skills">
+          <span class="chip">배송·물류 서비스 기획</span>
+          <span class="chip">웹/앱 화면 설계</span>
+          <span class="chip">Admin·백오피스 기획</span>
+          <span class="chip">API/FTP 연동 기획</span>
+          <span class="chip">배송 추적·정산 로직</span>
+          <span class="chip">IT Help Desk 운영</span>
+          <span class="chip">QA·테스트 시나리오</span>
+        </div>
+      </section>
+
+      <section>
+        <h2>기술 스택</h2>
+        <div class="skills">
+          <span class="chip">MS-SQL</span>
+          <span class="chip">Python (Selenium, Requests, Pillow)</span>
+          <span class="chip">MS Office 상급</span>
+          <span class="chip">비즈니스 영어</span>
+        </div>
+      </section>
+
+      <section>
+        <h2>자격·어학</h2>
+        <ul class="list-tight">
+          <li>TOEIC 805점 (2021.03)</li>
+          <li>건설기계조종사(3톤 미만 지게차)</li>
+          <li>유통관리사 2급</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>기타</h2>
+        <ul class="list-tight">
+          <li>공군 병장 만기 제대 (2011.04 – 2013.04)</li>
+          <li>사회봉사 인증 (숭실대학교 총장)</li>
+          <li>언론 소개: SSG닷컴 심야배송·자동화 물류센터 관련 기사</li>
+          <li>이직 가능 시기: 최종 합격 후 4주 내</li>
+          <li>현재 연봉(원천징수 기준): 6,000만원</li>
+          <li>희망 연봉(계약 기준): 6,000만원 이상 협의 가능</li>
+        </ul>
+      </section>
+    </aside>
+  </div>
+
+  <footer>
+    © <span id="year"></span> 이현재 — 물류·배송 웹서비스 기획자
+  </footer>
+</main>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
