--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <p class="lead">
         커머스 물류·배송 도메인 특화 웹서비스 기획 · Admin/백오피스 · API/연동 · 자동화 물류센터·라스트마일 배송 전략
       </p>
-      <p class="tagline">
-        5년 8개월 경력 · Qoo10·QXPRESS 물류 플랫폼 → SSG.COM 물류플랫폼기획팀
+      <p class="tagline" id="career-line">
+        <!-- JS에서 동적 계산 -->
       </p>
     </div>
   </header>
@@ -81,10 +81,21 @@
     <div class="card">
       <section>
         <h2>소개</h2>
-        <p style="font-size:13px; line-height:1.6;">
+        <p style="font-size:13px; line-height:1.6; margin-bottom:6px;">
           이커머스/물류 현장 경험을 바탕으로, 주문·배송·정산 전 과정을 설계해 온 물류·배송 서비스 기획자입니다.
           해외 C2C 플랫폼(Qoo10)부터 국내 커머스(SSG.COM)까지, 라스트마일 제휴·배송 추적·자동화 물류센터·백오피스 Admin까지
           전주기를 직접 기획·운영해 왔습니다.
+        </p>
+        <p style="font-size:13px; line-height:1.6; margin-top:8px;">
+          언론 소개:
+          <a href="https://www.hankyung.com/article/202405136943i" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
+           이마트몰 피킹 내비게이션 
+          </a>
+          ·
+          <a href="https://www.businesspost.co.kr/BP?command=article_view&num=346816" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
+            심야배송
+          </a>
+          관련 기사
         </p>
       </section>
 
@@ -147,23 +158,12 @@
 
           <div class="exp-item">
             <div class="exp-header">
-              <div class="exp-title">배송 추적 페이지 및 책임 주체 명시</div>
-              <div class="meta">Qoo10 / QXPRESS</div>
-            </div>
-            <ul class="list-tight">
-              <li>입·출고, 공항 출·도착, 현지 배송 인계 등 단계별로 책임 배송사를 명시하는 Multi Tracking 페이지 기획</li>
-              <li>배송 상태·책임 주체가 명확해져 화물 분실·파손 클레임 처리 리드타임과 빈도를 낮추는 데 기여</li>
-            </ul>
-          </div>
-
-          <div class="exp-item">
-            <div class="exp-header">
               <div class="exp-title">자동화 물류센터·배송 기사 앱·백오피스 기획</div>
               <div class="meta">SSG.COM 물류플랫폼기획팀</div>
             </div>
             <ul class="list-tight">
               <li>이마트몰 쓱배송 기사 앱 및 백오피스, 백화점 배송 백오피스 운영 개선, 자동화센터 대출입·이관·폐기·집품 기능 기획</li>
-              <li>이마트 점포 POG·집품 관련 시스템 기획이 한국경제 등 외부 매체에 소개되며, 현장 운영 효율화 사례로 보도</li>
+              <li>이마트 점포 POG·집품 관련 시스템 기획이 외부 매체에 소개되며, 현장 운영 효율화 사례로 보도</li>
             </ul>
           </div>
         </div>
@@ -182,8 +182,7 @@
         </p>
         <p style="font-size:13px; line-height:1.6;">
           SSG.COM에서는 이마트몰 쓱배송 기사 앱·백오피스, 자동화 물류센터, 백화점 배송/집품 등 고도화된 국내 커머스 환경에서
-          물류 서비스 기획 경험을 확장하고 있습니다. 그룹사의 전략 변경으로 온라인 물류 사업이 축소·중단되는 국면을 겪으며
-          더욱 성장 가능성이 높은 환경에서 물류·배송 플랫폼 기획 역량을 발휘하고자 새로운 도전을 준비하고 있습니다.
+          물류 서비스 기획 경험을 확장하고 있습니다.
         </p>
       </section>
     </div>
@@ -207,7 +206,7 @@
           </div>
           <div>
             <div class="meta">거주지</div>
-            <div style="font-size:13px;">인천광역시 부평구 마곡로 14</div>
+            <div style="font-size:13px;">인천광역시 부평구 </div>
           </div>
         </div>
       </section>
@@ -216,7 +215,7 @@
         <h2>연락처</h2>
         <p class="contact">
           이메일: <a href="mailto:october1129@naver.com">october1129@naver.com</a><br/>
-          전화: 010-2948-6029
+          
         </p>
       </section>
 
@@ -224,14 +223,13 @@
         <h2>학력</h2>
         <p class="meta">
           2010.03 – 2017.08<br/>
-          숭실대학교 행정·경제학과 복수전공 학사 (3.17 / 4.5), 서울<br/><br/>
-          2007.03 – 2010.02<br/>
-          평촌고등학교 졸업, 경기 안양
+          숭실대학교 행정·경제학과 복수전공 학사, 서울<br/><br/>        
+          
         </p>
       </section>
 
       <section>
-        <h2>경력 요약 (5년 8개월)</h2>
+        <h2>경력 요약</h2>
         <div class="experience">
           <div class="exp-item">
             <div class="exp-title">SSG.COM</div>
@@ -273,8 +271,7 @@
 
       <section>
         <h2>자격·어학</h2>
-        <ul class="list-tight">
-          <li>TOEIC 805점 (2021.03)</li>
+        <ul class="list-tight">          
           <li>건설기계조종사(3톤 미만 지게차)</li>
           <li>유통관리사 2급</li>
         </ul>
@@ -283,12 +280,8 @@
       <section>
         <h2>기타</h2>
         <ul class="list-tight">
-          <li>공군 병장 만기 제대 (2011.04 – 2013.04)</li>
-          <li>사회봉사 인증 (숭실대학교 총장)</li>
-          <li>언론 소개: SSG닷컴 심야배송·자동화 물류센터 관련 기사</li>
-          <li>이직 가능 시기: 최종 합격 후 4주 내</li>
-          <li>현재 연봉(원천징수 기준): 6,000만원</li>
-          <li>희망 연봉(계약 기준): 6,000만원 이상 협의 가능</li>
+          <li>공군 병장 만기 제대 (2011 – 2013)</li>
+          <li>사회봉사 인증 (숭실대학교 총장)</li>       
         </ul>
       </section>
     </aside>
@@ -300,7 +293,41 @@
 </main>
 
 <script>
+  // 연도 자동 표기
   document.getElementById('year').textContent = new Date().getFullYear();
+
+  // 2018-12-01부터 오늘까지의 경력 기간(년, 개월) 동적 계산
+  (function () {
+    const startYear = 2018;
+    const startMonth = 12; // 1~12
+    const startDay = 1;
+
+    const start = new Date(startYear, startMonth - 1, startDay);
+    const today = new Date();
+
+    let years = today.getFullYear() - start.getFullYear();
+    let months = today.getMonth() - start.getMonth();
+    let days = today.getDate() - start.getDate();
+
+    if (days < 0) {
+      months -= 1;
+    }
+    if (months < 0) {
+      years -= 1;
+      months += 12;
+    }
+
+    const yearText = years > 0 ? years + "년 " : "";
+    const monthText = months > 0 ? months + "개월 " : "";
+    const careerText = (yearText + monthText).trim() || "신입";
+
+    const line = careerText + " 경력 · Qoo10·QXPRESS 물류 플랫폼 → SSG.COM 물류플랫폼기획팀";
+
+    const el = document.getElementById("career-line");
+    if (el) {
+      el.textContent = line;
+    }
+  })();
 </script>
 </body>
 </html>
