--- a/index.html
+++ b/index.html
@@ -79,35 +79,33 @@
   <div class="grid">
     <!-- 좌측 메인 -->
     <div class="card">
-      <section>
-        <h2>소개</h2>
-        <p style="font-size:13px; line-height:1.6; margin-bottom:6px;">
-          이커머스/물류 현장 경험을 바탕으로, 주문·배송·정산 전 과정을 설계해 온 물류·배송 서비스 기획자입니다.
-          해외 C2C 플랫폼(Qoo10)부터 국내 커머스(SSG.COM)까지, 라스트마일 제휴·배송 추적·자동화 물류센터·백오피스 Admin까지
-          전주기를 직접 기획·운영해 왔습니다.
-        </p>
-        <p style="font-size:13px; line-height:1.6; margin-top:8px;">
-          언론 소개:
-          <a href="https://www.hankyung.com/article/202405136943i" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
-           이마트몰 피킹 내비게이션 
-          </a>
-          ·
-          <a href="https://www.businesspost.co.kr/BP?command=article_view&num=346816" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
-            심야배송
-          </a>
-          관련 기사
-        </p>
-      </section>
+<section>
+  <h2>소개</h2>
+  <p style="font-size:13px; line-height:1.6; margin-bottom:6px;">
+    이커머스/물류 현장 경험을 바탕으로, 주문·배송·정산 전 과정을 설계해 온 물류·배송 서비스 기획자입니다.
+    해외 C2C 플랫폼(Qoo10)부터 국내 커머스(SSG.COM)까지, 라스트마일 제휴·배송 추적·자동화 물류센터·백오피스 Admin까지
+    전주기를 직접 기획·운영해 왔습니다.
+  </p>
+  <p style="font-size:13px; line-height:1.6; margin-top:8px;">
+    언론 소개:
+    <a href="https://www.hankyung.com/article/202405136943i" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
+    이마트몰 피킹 내비게이션
+    </a>
+    ·
+    <a href="https://www.businesspost.co.kr/BP?command=article_view&num=346816" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
+      심야배송
+    </a>
+    관련 기사
+  </p>
+  <p style="font-size:13px; line-height:1.6; margin-top:4px;">
+    유튜브:
+    <a href="https://www.youtube.com/watch?v=4tbxUU3KVWM" target="_blank" rel="noopener" style="color:#a5b4fc; text-decoration:none;">
+      SSG NEO4센터 소개 (신세계그룹 공식 유튜브 채널)
+    </a>
+    영상에서 보여지는 자동화 물류센터의 피킹·패킹·출하 및 재고의 백오피스 시스템을 직접 기획·운영자 교육을 진행한 경험을 보유하고 있습니다.
+  </p>
+</section>
 
-      <section>
-        <h2>핵심 역량</h2>
-        <ul class="list-tight">
-          <li>이커머스 배송·물류 도메인 특화 서비스/플랫폼 기획 (Qoo10, QXPRESS, SSG.COM)</li>
-          <li>Admin/백오피스·배송 추적·정산·원격 입고·운송장 출력 등 운영 시스템 기획</li>
-          <li>해외/국내 라스트마일 배송사 API·FTP 연동 및 제휴 프로세스 기획 (DHL, YTO, POS Laju 등)</li>
-          <li>MS-SQL·Python(Selenium, Requests) 기반 데이터 추출·운영 이슈 대응 및 QA</li>
-        </ul>
-      </section>
 
       <section>
         <h2>주요 성과</h2>
