--- a/index.html
+++ b/index.html
@@ -336,31 +336,57 @@
       <!-- 이미 올리신 intro 내용 유지 -->
     </div>
 
-    <div class="tab-panel" id="tab-thoughts">
-      <p style="margin:0 0 6px;">
-        처음 서비스 기획자로 일을 시작했을 때 부터 지금까지도 ‘왜 내 생각이 전달되지 않을까’라는 질문이 늘 따라다닙니다.
-      </p>
-      <p style="margin:0;">
+<div class="tab-panel" id="tab-thoughts">
+  <p style="margin:0 0 6px;">
+    처음 서비스 기획자로 일을 시작했을 때부터 지금까지도 ‘왜 내 생각이 전달되지 않을까’라는 질문이 늘 따라다닙니다.
+  </p>
 
- “애자일”, “스크럼”, “지라” TC 같은 용어가 오가면 판교사투리를 왜 쓰느냐 한국인들과의 대화조차 영어 단어로 포장된 채 진행되는 모습이 낯설었습니다.
- 직관보다는 용어에 익숙해진 소통 방식은 때로 상대의 의도를 흐리게 만들었고, 저는 ‘낫 놓고 기역자도 모른다’는 속담이 떠오르며 답답함을 느꼈죠. 
- 상대가 내 생각을 한 번에 이해하지 못할 때면 “스무고개”처럼 질문을 이어가야 하는 상황이 오히려 저의 설명이 부족했음을 깨닫는 계기가 되었습니다. 
- 시간이 흐르며 깨달은 것은, 복잡한 상황을 잘게 쪼갤수록 전체 그림이 흐려질 수 있다는 점이었습니다.
-인도 개발팀과 협업할 때도 비슷한 경험을 했습니다. 현지 매니저가 소통의 다리를 놓아주었지만, 개발 일정은 늘 지연되고 결과물은 기대에 미치지 못했죠. “소통은 잘 된다”는 보고와 현장의 괴리가 왜 생기는지 고민하다,
- 결국 용어나 절차가 아닌 ‘공감각’이 부재했음을 알게 되었습니다. 매니저는 용어를 정확히 전달했을지 몰라도, 개발자들이 진정으로 이해해야 할 목적과 맥락은 빠져 있었던 것입니다.
-이 모든 경험은 저에게 소통의 본질을 질문하게 했습니다. 진정한 협업은 화려한 용어나 형식이 아닌 상대의 언어와 관점을 이해하려는 노력에서 시작됩니다.
-이러한 고민도 생성형 인공지능이 대중화되면서 고민의 농도가 점점 흩어져갑니다. 한국인이건 외국인이건 영어이던 개발자가 사용하는 언어이던 생성형 인공지능을 통해서라면 소통은 할 수 있습니다.
-하지만 결과는 늘 원하는 결과가 나오지는 않네요. 내가 의도한 것을 실현시키기 위해서는 방향을 세세하게 짚어줘야하고 결과물이 합당한지에 대해 검증하는 역량은 필요하고 발전시켜야 하는게 현실이네요.
-기술이 소통의 장벽을 낮춘다고 기대했건만 오히려 의도의 정확성과 맥락의 깊이를 놓치기 쉬워졌음을 깨닫습니다. 
-AI가 번역하거나 요약해 주는 내용은 표면적 이해만 가능하게 하고, 핵심인 ‘왜’와 ‘어떻게’는 여전히 인간이 채워야 하는 공백으로 남습니다. 
-단어는 정확히 전달되도 목적과 상황이 빠지면 결과는 왜곡되죠.
- 소통의 본질은 여전히 ‘서로의 마음을 읽는 것’에 있음을,,,
-그래서 말로만 일하는 것도 가능한 게 서비스기획인 듯 합니다. 정리된 문서나 스토리보드 필요없이 기존 내용에 대한 모든 이해는 없어도 됩니다. 
-직관적으로 감에 따라 말하고 그 방향이 맞으면 좋고 안 되도 그만입니다. 맞다 틀리다의 관점으로 보자면 확률은 반반이니까요.
-아무리 그럴 수 있다고 해도 내용을 나의 수준에서 파악하지 못한 상황에서 이야기나 행동을 하지 않는 나의 특징은 무책임한 것인지 신중한 것인지 과연 세상에서는 어떻게 보여질지 헷갈리는 게 요즘의 생각입니다.
-      </p>
-    </div>
-  </div>
+  <p style="margin:0 0 6px;">
+    “애자일”, “스크럼”, “지라”, TC 같은 용어가 오가면 판교사투리를 왜 쓰느냐, 한국인들과의 대화조차 영어 단어로 포장된 채 진행되는 모습이 낯설었습니다.
+    직관보다는 용어에 익숙해진 소통 방식은 때로 상대의 의도를 흐리게 만들었고, 저는 ‘낫 놓고 기역자도 모른다’는 속담이 떠오르며 답답함을 느꼈죠.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    상대가 내 생각을 한 번에 이해하지 못할 때면 “스무고개”처럼 질문을 이어가야 하는 상황이 오히려 저의 설명이 부족했음을 깨닫는 계기가 되었습니다.
+    시간이 흐르며 깨달은 것은, 복잡한 상황을 잘게 쪼갤수록 전체 그림이 흐려질 수 있다는 점이었습니다.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    인도 개발팀과 협업할 때도 비슷한 경험을 했습니다. 현지 매니저가 소통의 다리를 놓아주었지만, 개발 일정은 늘 지연되고 결과물은 기대에 미치지 못했죠.
+    “소통은 잘 된다”는 보고와 현장의 괴리가 왜 생기는지 고민하다, 결국 용어나 절차가 아닌 ‘공감각’이 부재했음을 알게 되었습니다.
+    매니저는 용어를 정확히 전달했을지 몰라도, 개발자들이 진정으로 이해해야 할 목적과 맥락은 빠져 있었던 것입니다.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    이 모든 경험은 저에게 소통의 본질을 질문하게 했습니다. 진정한 협업은 화려한 용어나 형식이 아닌 상대의 언어와 관점을 이해하려는 노력에서 시작됩니다.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    이러한 고민도 생성형 인공지능이 대중화되면서 고민의 농도가 점점 흩어져갑니다. 한국인이건 외국인이건, 영어이든 개발자가 사용하는 언어이든
+    생성형 인공지능을 통해서라면 소통은 할 수 있습니다. 하지만 결과는 늘 원하는 결과가 나오지는 않네요.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    내가 의도한 것을 실현시키기 위해서는 방향을 세세하게 짚어줘야 하고, 결과물이 합당한지에 대해 검증하는 역량은 필요하고 발전시켜야 하는 게 현실이네요.
+    기술이 소통의 장벽을 낮춘다고 기대했건만 오히려 의도의 정확성과 맥락의 깊이를 놓치기 쉬워졌음을 깨닫습니다.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    AI가 번역하거나 요약해 주는 내용은 표면적 이해만 가능하게 하고, 핵심인 ‘왜’와 ‘어떻게’는 여전히 인간이 채워야 하는 공백으로 남습니다.
+    단어는 정확히 전달돼도 목적과 상황이 빠지면 결과는 왜곡되죠. 소통의 본질은 여전히 ‘서로의 마음을 읽는 것’에 있음을 느낍니다.
+  </p>
+
+  <p style="margin:0 0 6px;">
+    그래서 말로만 일하는 것도 가능한 게 서비스기획인 듯 합니다. 정리된 문서나 스토리보드 필요 없이 기존 내용에 대한 모든 이해는 없어도 됩니다.
+    직관적으로 감에 따라 말하고 그 방향이 맞으면 좋고, 안 돼도 그만입니다. 맞다 틀리다의 관점으로 보자면 확률은 반반이니까요.
+  </p>
+
+  <p style="margin:0;">
+    아무리 그럴 수 있다고 해도 내용을 나의 수준에서 파악하지 못한 상황에서 이야기나 행동을 하지 않는 나의 특징은
+    무책임한 것인지 신중한 것인지, 과연 세상에서는 어떻게 보여질지 헷갈리는 게 요즘의 생각입니다.
+  </p>
+</div>
+
 
   <footer>
     © <span id="year"></span> 이현재 — 물류·배송 웹서비스 기획자
