--- a/index.html
+++ b/index.html
@@ -342,43 +342,41 @@
   </p>
 
   <p style="margin:0 0 6px;">
-    “애자일”, “스크럼”, “지라”, TC 같은 용어가 오가면 판교사투리를 왜 쓰느냐, 한국인들과의 대화조차 영어 단어로 포장된 채 진행되는 모습이 낯설었습니다.
-    직관보다는 용어에 익숙해진 소통 방식은 때로 상대의 의도를 흐리게 만들었고, 저는 ‘낫 놓고 기역자도 모른다’는 속담이 떠오르며 답답함을 느꼈죠.
+처음엔 애자일, 스크럼, 지라 같은 용어들이 마치 판교사투리처럼 느껴졌습니다. 한국인끼리 영어 단어로 포장된 대화가 낯설었고 직관보다 용어에 익숙해진 소통 방식이 상대의 의도를 흐리게 만든다고 생각했죠.
+ 그때는 '낫 놓고 기역자도 모른다'는 속담만 떠올렸습니다. 하지만 시간이 흐르며 깨달은 것은, 그 용어들이 문제가 아니라 내가 그 용어들이 지닌 맥락과 목적을 소화하지 못했다는 것이네요.
   </p>
 
   <p style="margin:0 0 6px;">
-    상대가 내 생각을 한 번에 이해하지 못할 때면 “스무고개”처럼 질문을 이어가야 하는 상황이 오히려 저의 설명이 부족했음을 깨닫는 계기가 되었습니다.
-    시간이 흐르며 깨달은 것은, 복잡한 상황을 잘게 쪼갤수록 전체 그림이 흐려질 수 있다는 점이었습니다.
+ 상대가 내 생각을 한 번에 이해하지 못할 때마다 스무고개를 해야 하는 건 오히려 내 설명이 과도하게 추상적이거나 불완전했다 것입니다. 
+ 복잡한 상황을 잘게 쪼개면 그림이 흐려진다고 느꼈지만 그건 쪼개는 방식이 잘못된 것이지 쪼개면 안될 이유가 있을지 아직도 스스로 답변은 어렵습니다. 
   </p>
 
   <p style="margin:0 0 6px;">
-    인도 개발팀과 협업할 때도 비슷한 경험을 했습니다. 현지 매니저가 소통의 다리를 놓아주었지만, 개발 일정은 늘 지연되고 결과물은 기대에 미치지 못했죠.
-    “소통은 잘 된다”는 보고와 현장의 괴리가 왜 생기는지 고민하다, 결국 용어나 절차가 아닌 ‘공감각’이 부재했음을 알게 되었습니다.
-    매니저는 용어를 정확히 전달했을지 몰라도, 개발자들이 진정으로 이해해야 할 목적과 맥락은 빠져 있었던 것입니다.
+인도 개발팀과 협업하며 비슷한 실수를 반복했습니다. 현지 매니저가 소통의 다리를 놓아줬지만 결과는 기대에 미치지 못했고, "소통은 잘 된다"는것으로 시간을 흘려보내며 현장의 괴리만 커졌습니다. 
+돌이켜보면,  왜 이 기능이 필요한지, 사용자의 어떤 요청에 대응하려 하는지를 충분히 설명하지 않았던 탓이라 생각 합니다. 단어는 정확히 전달했지만 그 단어들이 왜 태어났는지에 대한 이야기는 빠져 있었습니다.
   </p>
 
   <p style="margin:0 0 6px;">
-    이 모든 경험은 저에게 소통의 본질을 질문하게 했습니다. 진정한 협업은 화려한 용어나 형식이 아닌 상대의 언어와 관점을 이해하려는 노력에서 시작됩니다.
+이 모든 경험은 저에게 소통의 본질을 질문하게 했습니다. 그리고 생성형 AI가 대중화되면서 그 질문은 더 깊어졌습니다. AI 덕분에 한국인이던 외국인이던 개발자던 비전공자던 언어 장벽은 낮아졌습니다.
   </p>
 
   <p style="margin:0 0 6px;">
-    이러한 고민도 생성형 인공지능이 대중화되면서 고민의 농도가 점점 흩어져갑니다. 한국인이건 외국인이건, 영어이든 개발자가 사용하는 언어이든
-    생성형 인공지능을 통해서라면 소통은 할 수 있습니다. 하지만 결과는 늘 원하는 결과가 나오지는 않네요.
+ 하지만 결과는 늘 원하는 대로 나오지 않았습니다. AI는 내 의도를 실현시키기 위해 방향을 세세하게 짚어달라고 요구했고 그 결과물이 합당한지 검증하는 건 여전히 제 몫이었습니다. 
+기술이 장벽을 낮춰주리라 기대했건만 오히려 내 의도가 얼마나 정확하고 깊은지를 검증하는 거울이 되었습니다.
   </p>
 
   <p style="margin:0 0 6px;">
-    내가 의도한 것을 실현시키기 위해서는 방향을 세세하게 짚어줘야 하고, 결과물이 합당한지에 대해 검증하는 역량은 필요하고 발전시켜야 하는 게 현실이네요.
-    기술이 소통의 장벽을 낮춘다고 기대했건만 오히려 의도의 정확성과 맥락의 깊이를 놓치기 쉬워졌음을 깨닫습니다.
+AI가 번역하고 요약해주는 내용은 표면적 이해만 가능하게 하고 핵심인 '왜'와 '어떻게'는 여전히 인간이 채워야 하는 공백으로 남습니다. 
+단어는 정확히 전달돼도 목적과 상황이 빠지면 결과는 왜곡되죠. 소통의 본질이 여전히 '서로의 요청을 해석하는 것'에 있다고 느낍니다. 이는 감정이 아닌 맥락과 목적을 담은 의도입니다.
   </p>
 
   <p style="margin:0 0 6px;">
-    AI가 번역하거나 요약해 주는 내용은 표면적 이해만 가능하게 하고, 핵심인 ‘왜’와 ‘어떻게’는 여전히 인간이 채워야 하는 공백으로 남습니다.
-    단어는 정확히 전달돼도 목적과 상황이 빠지면 결과는 왜곡되죠. 소통의 본질은 여전히 ‘서로의 마음을 읽는 것’에 있음을 느낍니다.
+그래서 기존 내용에 대한 모든 이해가 없이도 말로만 일하는 게 가능한 것이 서비스 기획인 듯 합니다. 그 방향이 맞으면 좋고, 안 돼도 그만이라는 역량말입니다. 
+아무리 그럴 수 있다고 해도 내용을 내 수준에서 파악하지 못한 채 이야기하지 않는 나의 특징을 좋게 표현하자면 '무책임하지 않으려는 신중함' 이지만
   </p>
 
   <p style="margin:0 0 6px;">
-    그래서 말로만 일하는 것도 가능한 게 서비스기획인 듯 합니다. 정리된 문서나 스토리보드 필요 없이 기존 내용에 대한 모든 이해는 없어도 됩니다.
-    직관적으로 감에 따라 말하고 그 방향이 맞으면 좋고, 안 돼도 그만입니다. 맞다 틀리다의 관점으로 보자면 확률은 반반이니까요.
+사실 명확성을 포기한 채 무사안일을 택하려는 방어는 아니었을까 자문합니다. 
   </p>
 
   <p style="margin:0;">
